# comp445-project

./: .gitignore  README.md
frontend/: .env.example  README.md  package.json  pnpm-lock.yaml
frontend/src/lib/: api.ts  model.ts  store.svelte.ts  stores.svelte.ts
frontend/src/lib/components/ui/: DarkModeSwitcher.svelte
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/record/[id]/: +page.svelte
search-engine/: package-lock.json  package.json
search-engine/src/: App.svelte  similardoc.svelte
search-engine/src/routes/: +page.svelte
server/: Cargo.toml  README.md
server-python/: README.md  processing.py
server/src/: handler.rs  main.rs  model.rs  schema.rs  search.rs
web/: index.html  package-lock.json  package.json  pagination.js  search.css
web/interfaces/: result.ts  searchRequest.ts
web/src/routes/: +page.svelte
