[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7.9"
tower-http = { version = "0.6.2", features = ["add-extension", "trace"] }
tower = { version = "0.5.1", features = ["util", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
csv = "1.3.1"
regex = "1.11.1"
rug = "1.26.1"
rand = "0.8"
rusqlite = { version = "0.32.0", features = ["bundled"] }
